# near-nft-back-to-code-challenge

./: README.md  package.json
contract/: .gitignore  Cargo.toml  README.md
contract/src/: box.rs  burn.rs  collection.rs  events.rs  lib.rs  mint.rs  schema.rs  template.rs
src/: config.js
