[package]
name = "ezbox"
version = "0.1.0"
authors = ["Phillip <vkphambn@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.4"
serde_json = "1.0"
chrono = "0.4"
near-contract-standards = "3.2.0"
serde = "1"
serde_with = "1"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
